src/apps/myaccount/submodules/balance/balance.scss
@import "../../../../css/partials/base";

.balance-content-wrapper .dataTables_scroll .dataTables_scrollBody {
	max-height: 300px;
}

.balance-content-wrapper .title-box.pull-right {
	margin-left: 10px;
}
.balance-content-wrapper .title-box.primary-box {
	background-color: $primary-color;
	border-color: $primary-color;
	color: #fff;
	cursor: pointer;
}

.balance-content-wrapper .title-box-group .title-box:not(:first-child) {
	border-bottom-left-radius: 0;
	border-top-left-radius: 0;
}
.balance-content-wrapper .title-box-group .title-box:not(:last-child) {
	border-bottom-right-radius: 0;
	border-top-right-radius: 0;
	border-right: none;
}

.balance-content-wrapper .balance-table-header > span {
	margin-right: 5px;
}

.balance-content-wrapper .balance-table-header input {
	cursor: pointer;
	background-color: #f0f0f9;
	border-radius: 2px;
	box-shadow: none;
	text-align: center;
	width: 80px;
	margin: 0 0 0 5px;
}

.balance-content-wrapper .balance-table-header i.refresh-filter:hover {
	text-shadow: 1px 1px 0px #999;
	cursor: pointer;
}

.balance-content-wrapper .balance-table-header .action-number#download {
	color: #666;
}

.balance-content-wrapper .balance-table-header .action-number#download i {
	text-decoration: none;
	margin-right: 5px;
}

.balance-content-wrapper .search-box .search-query {
	border-radius: 2px;
	box-shadow: none;
	padding-left: 36px;
	width: 160px;
}
.balance-content-wrapper .search-box .fa-search {
	margin: 8px 0 0 12.5px;
}

.balance-content-wrapper .clickover {
	width: 270px;
	font-size: 12px;
}

.balance-content-wrapper .tab-type-ledger {
	display: none;
}

/* TABLES */
.balance-content-wrapper table {
	margin-bottom: 35px;
}

.balance-content-wrapper table .arrow-direction {
	margin-left: 20px;
	margin-right: 20px;
}
/* ADD CREDITS POPUP */
.add-credits-popup-wrapper {
	display: block;
	margin: auto;
	width: 520px;
}

.add-credits-popup-wrapper label {
	line-height: 28px;
	margin-bottom: 0;
}

.add-credits-popup-wrapper form label {
	margin-bottom: 25px;
}

.add-credits-popup-wrapper form label:last-child {
	margin-bottom: 0;
}

.add-credits-popup-wrapper form label::after {
	display: block;
	content: '';
	clear: both;
}

.add-credits-popup-wrapper input {
	margin-bottom: 0;
}

.add-credits-popup-wrapper .dynamic-content {
	display: none;
	margin-top: 25px;
	margin-bottom: 0;
}

.add-credits-popup-wrapper .monster-switch {
	margin-left: 20px;
}

.add-credits-popup-wrapper .currency-container {
	float: right;
}

.add-credits-popup-wrapper .currency-container input {
	margin-left: 5px;
}

.add-credits-popup-wrapper .add-credits-content-wrapper:not(.active) {
	display: none;
}

.add-credits-popup-wrapper .add-credits-header-wrapper {
	padding: 20px;
	border-bottom: 1px solid #c0c0c9;
}

.add-credits-popup-wrapper .add-credits-header-balance {
	font-size: 22pt;
	font-weight: 600;
	color: $primary-color;
}

.add-credits-popup-wrapper .add-credits-menu-wrapper {
	margin-top: 0;
	padding: 20px 20px 0;
}

.add-credits-popup-wrapper .add-credits-menu-wrapper ul {
	width: 100%;
	border-bottom: 1px solid #c0c0c9;
}

.add-credits-popup-wrapper .add-credits-content-wrapper {
	padding: 20px;
}

.add-credits-popup-wrapper .add-credits-content .text {
	margin-bottom: 20px;
	font-size: 14px;
}

.add-credits-popup-wrapper .add-credits-actions {
	margin-top: 20px;
	padding-top: 20px;
	border-top: 1px solid #c0c0c9;

}

.add-credits-popup-wrapper .add-credits-header::after,
.add-credits-popup-wrapper .add-credits-actions::after {
	display: block;
	content: '';
	clear: both;
}

